# test_atomic

TEST_ATOMICS_CUDA/: CMakeLists.txt  scatter_view.cu
TEST_ATOMICS_HIP/: CMakeLists.txt  scatter_view.cpp
TEST_ATOMICS_KOKKOS/: scatter_view.cpp
TEST_ATOMICS_SYCL/: scatter_view.cpp
